--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
+    "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
     "next": "13.4.19",
     "postcss": "8.4.28",
