--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "eslint": "8.47.0",
+    "eslint": "^8.48.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
     "jose": "^4.14.6",
@@ -26,11 +26,12 @@
     "mongoose": "^7.4.4",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "^4.9.5",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0"
