--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "eslint": "8.47.0",
+    "eslint": "^8.48.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
+    "jose": "^4.14.6",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "zod": "^3.22.2",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0"
   }
 }
