--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "eslint": "^8.48.0",
     "eslint-config-next": "13.4.19",
@@ -30,10 +31,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "zod": "^3.22.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.3"
   }
 }
