--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "^5.2.2",
     "yup": "^1.2.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
