--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.1",
+    "@hookform/resolvers": "^3.3.1",
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -30,8 +30,10 @@
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "tailwindcss": "3.3.3",
     "typescript": "^5.2.2",
+    "yup": "^1.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
