--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@types/node": "20.5.3",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.48.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
+    "joi": "^17.10.1",
     "jose": "^4.14.6",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
@@ -31,13 +28,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "^5.2.2",
     "yup": "^1.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.3"
+    "@types/bcryptjs": "^2.4.3",
+    "@types/node": "20.5.3",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/parser": "^5.62.0"
   }
 }
